--- a/doc/readme/CN/常见问题.md
+++ b/doc/readme/CN/常见问题.md
@@ -15,6 +15,13 @@
 
 `XXX`是任意库名称，这段报错意为你没有某个库此时有两种方法
 
-1. 再次使用`pip install -r requirements.txt`安装一边库
+1. 再次使用`pip install -r requirements.txt`安装一遍库
 2. 直接使用`pip install XXX`，这个方法的问题就是可能会与其他的库不兼容,可以指定与requirements.txt一样的版本，具体指令自己上网搜
 3. 如果使用的是**Anaconda**那么使用`conda install XXX`，conda会为你选择合适且兼容的版本
+
+## 无法安装Polygon3
+
+一般里面带有`error: Microsoft Visual C++ 14.0 or greater is required. Get it with "Microsoft C++ Build Tools": https://visualstudio.microsoft.com/visual-cpp-build-tools/
+[end of output]`那么说明你缺少c++工具，你可以直接按照他给出的网址去下载，下载完后重新装就可以了。
+
+[C++Build工具](https://visualstudio.microsoft.com/visual-cpp-build-tools/)
