--- a/doc/readme/CN/常见问题.md
+++ b/doc/readme/CN/常见问题.md
@@ -25,3 +25,8 @@
 [end of output]`那么说明你缺少c++工具，你可以直接按照他给出的网址去下载，下载完后重新装就可以了。
 
 [C++Build工具](https://visualstudio.microsoft.com/visual-cpp-build-tools/)
+
+## 运行脚本一直在按ESC或者匹配不到图片
+
+1. 分辨率问题，游戏分辨率请设置成1920*1080
+2. 缩放率问题，我电脑缩放率是150%所以模板图都是150%缩放率的，可以自己魔改，或者按照我的来(等我未来适配也是OK的)
