--- a/doc/readme/CN/常见问题.md
+++ b/doc/readme/CN/常见问题.md
@@ -25,3 +25,7 @@
 ## 运行脚本一直在按ESC或者匹配不到图片
 
 1. 分辨率问题，游戏分辨率请设置成1920*1080
+
+## 模拟宇宙无法运行
+
+查看Auto_Simulated_Universe文件夹是否为空，文件夹为空则到[模拟宇宙仓库](https://github.com/CHNZYX/Auto_Simulated_Universe)下载然后替换原空文件夹。
